--- a/raon-control/timeleap.html
+++ b/raon-control/timeleap.html
@@ -264,12 +264,13 @@
 
     var newEventAddr = serverAddr + '/event';
     var newSnapshotAddr = serverAddr + '/snapshot';
+    var newRecordConnectionAddr = serverAddr + '/snapshot/connection';
 
     var retrieveAddr = serverAddr + '/retrieve';
     var retrieveEventAddr = retrieveAddr + '/event';
     var retrieveSnapshotAddr = retrieveAddr + '/snapshot'
     var retrieveSnapshotRecordAddr = retrieveSnapshotAddr + '/record'
-    var retrieveSnapshotRecordConnectionAddr = retrieveSnapshotRecordAddr + '/connection'
+    var retrieveSnapshotRecordConnectionAddr = retrieveSnapshotAddr + '/connection'
 
     var today = new Date();
     var date = new Date();
@@ -873,7 +874,7 @@
                     });
                 }
 
-                setInterval(getRecordConnection, 60000);
+                setRecordConnection(snapshotRecordID);
 
             }
             // else {
@@ -886,29 +887,49 @@
         xhttp.send();
     }
 
-    function getRecordConnection() {
+    function setRecordConnection(snapshotRecordID) {
         var xhttp = new XMLHttpRequest();
         xhttp.onreadystatechange = function () {
             if (this.readyState == 4 && this.status == 200) {
-                var jsonValue = JSON.parse(this.responseText);
 
-                if(recordData.length == jsonValue.length) {
-
-                    for(let i = 0; i < jsonValue.length; i++) {
-                        recordData[i].status = jsonValue[i].recordData[i].pvname;
-                    }
-                }
-
-                console.log(recordData);
+                setInterval(getRecordConnection(snapshotRecordID), 3000);
             }
             // else {
             // alert('Status Error : ' + this.status);
             // }
         };
 
-        xhttp.open("POST", retrieveSnapshotRecordConnectionAddr, true);
+        var rName = newRecordConnectionAddr + '/' + snapshotRecordID;
+        xhttp.open("POST", rName, true);
         xhttp.setRequestHeader('Content-Type', 'application/json');
         xhttp.send(JSON.stringify(recordData));
+    }
+
+    function getRecordConnection(snapshotRecordID) {
+        var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function () {
+            if (this.readyState == 4 && this.status == 200) {
+                var jsonValue = JSON.parse(this.responseText);
+
+                console.log(jsonValue);
+
+                // if(recordData.length == jsonValue.length) {
+
+                //     for(let i = 0; i < jsonValue.length; i++) {
+                //         recordData[i].status = jsonValue[i].recordData[i].pvname;
+                //     }
+                // }
+
+            }
+            // else {
+            // alert('Status Error : ' + this.status);
+            // }
+        };
+
+        var rName = retrieveSnapshotRecordConnectionAddr + '/' + snapshotRecordID;
+        xhttp.open("POST", rName, true);
+        xhttp.setRequestHeader('Content-Type', 'application/json');
+        xhttp.send();
     }
 
 
