time leap put test

--- a/raon-control/timeleap.html
+++ b/raon-control/timeleap.html
@@ -223,6 +223,7 @@
         <div id="body-right">
             <div class="title-box" id="snapshot-id" style="display: inline-block;"></div>
             <div id="button-group">
+                <button class="config-button">Update</button>
                 <button class="config-button">Get</button>
                 <button class="config-button">Put</button>
                 <button class="config-button" onclick="importRecordFile()">Import</button>
@@ -257,7 +258,7 @@
 
 <script>
     // ctrluser Server
-    var serverAddr = 'http://192.168.0.105:9013/timeleap';
+    var serverAddr = 'http://192.168.68.126:9013/timeleap';
 
     // scwook Server
     // var serverAddr = 'http://localhost:9013/timeleap';
