--- a/raon-control/timeleap.html
+++ b/raon-control/timeleap.html
@@ -225,7 +225,7 @@
             <div id="button-group">
                 <button class="config-button">Update</button>
                 <button class="config-button">Get</button>
-                <button class="config-button">Put</button>
+                <button class="config-button" onclick="putSnapshotRecord()">Put</button>
                 <button class="config-button" onclick="importRecordFile()">Import</button>
                 <button class="config-button" onclick="exportRecordFile()">Export</button>
             </div>
@@ -266,6 +266,8 @@
     var newEventAddr = serverAddr + '/event';
     var newSnapshotAddr = serverAddr + '/snapshot';
     var newRecordConnectionAddr = serverAddr + '/snapshot/connection';
+
+    var putRecordAddr = serverAddr + '/snapshot/put';
 
     var retrieveAddr = serverAddr + '/retrieve';
     var retrieveEventAddr = serverAddr + '/retrieve/event';
@@ -634,6 +636,22 @@
     }
 
     // Snapshot Button Function
+    function putSnapshotRecord() {
+        var xhttp = new XMLHttpRequest();
+        xhttp.onreadystatechange = function () {
+            if (this.readyState == 4 && this.status == 200) {
+                console.log(this.responseText);
+            }
+            // else {
+            // alert('Status Error : ' + this.status);
+            // }
+        };
+
+        xhttp.open("POST", putRecordAddr, true);
+        xhttp.setRequestHeader('Content-Type', 'application/json');
+        xhttp.send(JSON.stringify(recordData));
+    }
+
     function importRecordFile() {
         var input = document.createElement("input");
         input.type = "file";
