--- a/raon-control/timeleap.html
+++ b/raon-control/timeleap.html
@@ -987,7 +987,7 @@
                         case 'true':
                             statusSVG = connectedSVG;
                             break;
-                        case 'fasle':
+                        case 'false':
                             statusSVG = disconnectedSVG;
                         default:
                             break;
